@@ -108,13 +108,6 @@ function load_optpage_data_compose() {
     $optvals[SMOPT_GRP_COMPOSE_REPLY] = array();
 
     $optvals[SMOPT_GRP_COMPOSE_REPLY][] = array(
-        'name'    => 'forward_cc',
-        'caption' => _("Include CCs when Forwarding Messages"),
-        'type'    => SMOPT_TYPE_BOOLEAN,
-        'refresh' => SMOPT_REFRESH_NONE
-    );
-
-    $optvals[SMOPT_GRP_COMPOSE_REPLY][] = array(
         'name'    => 'include_self_reply_all',
         'caption' => _("Include Me in CC when I Reply All"),
         'type'    => SMOPT_TYPE_BOOLEAN,
